<resources>
    <string name="app_name">College Scheduler</string>

    <string name="title_classes">Classes</string>
    <string name="title_exams">Exams</string>
    <string name="title_assignments">Assignments</string>
    <string name="title_todos">To-Do</string>

    <string name="header_classes">Class List</string>
    <string name="header_exams">Exam List</string>
    <string name="header_assignments">Assignment List</string>
    <string name="header_todos">To-Do List</string>

    <string name="class_message">You don\'t have any classes yet.\nPress ADD CLASS to input class data.</string>
    <string name="todo_message">You don\'t have any tasks yet.\nPress ADD TASK to input task data.</string>
    <string name="exam_message">You don\'t have any exams yet.\nPress ADD EXAM to input exam data.</string>
    <string name="assignment_message">You don\'t have any assignments yet.\nPress ADD ASSIGNMENT to input assignment data.</string>

    <string name="add_class">ADD CLASS</string>
    <string name="add_todo">ADD TASK</string>
    <string name="add_exam">ADD EXAM</string>
    <string name="add_assignment">ADD ASSIGNMENT</string>

    <string name="cancel">Cancel</string>
    <string name="edit">Edit Class Info</string>
    <string name="delete">Delete Class</string>
    <string name="default_name">Class Name</string>
    <string name="default_time">Class Time</string>
    <string name="default_location">Class Location</string>
    <string name="save">Save Class</string>
    <string name="class_info">Class Info</string>

    <string name="exam_info">Exam Info</string>
    <string name="default_ExamName">Exam Name</string>
    <string name="default_ExamTime">Exam Time</string>
    <string name="exam_day_default">Exam Day</string>
    <string name="exam_location_default">Location</string>
    <string name="course">Course</string>
    <string name="save_exam">Save Exam</string>

    <string name="Assignment_due_date_default">Due Date</string>
    <string name="Assignment_course_default">Course</string>
    <string name="Assignment_name_default">Assignment Name</string>
    <string name="assignment_time">Time</string>
    <string name="assignment_info">Assignment Info</string>
    <string name="save_assignment">Save Assignment</string>

    <string name="get_started">Get Started</string>
    <string name="intro_message">Manage your classes, assignments, and tasks effortlessly, all in one app.</string>
    <string name="intro_title">Elevate Your Productivity.</string>

    <string name="filter_by">Sort By:</string>
    <string name="hide">Hide Complete</string>
    <string name="hide_complete">Hide Complete</string>
    <string name="show_complete">Show Complete</string>
    <string name="save_task">Save Task</string>
    <string-array name="filter_options">
        <item>None</item>
        <item>Name</item>
        <item>Due Date</item>
        <item>Course</item>
    </string-array>
</resources>