<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:cardElevation="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/textViewDescription"
            android:text="@string/assignment_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editTextAssignmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Assignment_name_default" />

        <EditText
            android:id="@+id/editTextAssignmentCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Assignment_course_default" />

        <EditText
            android:id="@+id/editTextAssignmentDue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Assignment_due_date_default" />

        <EditText
            android:id="@+id/editTextAssignmentTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/assignment_time" />

        <Button
            android:id="@+id/buttonSaveAssignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_assignment" />

        <Button
            android:id="@+id/buttonCancelAssignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:backgroundTint="@color/red"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>