<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.collegescheduler.ui.classes.ClassesFragment"
        android:label="@string/title_classes"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.collegescheduler.ui.exams.ExamsFragment"
        android:label="@string/title_exams"
        tools:layout="@layout/fragment_exams" />

    <fragment
        android:id="@+id/navigation_assignments"
        android:name="com.example.collegescheduler.ui.assignments.AssignmentsFragment"
        android:label="@string/title_assignments"
        tools:layout="@layout/fragment_assignments" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.collegescheduler.ui.todos.TodosFragment"
        android:label="@string/title_todos"
        tools:layout="@layout/fragment_todos" />
</navigation>