<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:cardElevation="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/textViewDescription"
            android:text="@string/class_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editTextClassTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_name" />

        <EditText
            android:id="@+id/editTextClassTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_time" />

        <EditText
            android:id="@+id/editTextClassRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Days" />

        <EditText
            android:id="@+id/editTextClassRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Class Room" />

        <EditText
            android:id="@+id/editTextClassLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_location" />

        <EditText
            android:id="@+id/editTextClassSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Class Section" />

        <EditText
            android:id="@+id/editTextClassProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Professor" />

        <Button
            android:id="@+id/buttonSaveClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonCancelClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:backgroundTint="@color/red"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>