<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.todos.TodosFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize"
        >
        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/header_todos"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true" />
        <LinearLayout
            android:id="@+id/filterHolder"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_below="@+id/text_notifications"
            android:gravity="center_vertical"
            android:layout_margin="16dp">
            <TextView
                android:id="@+id/filterDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_by"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black"/>
            <Spinner
                android:id="@+id/spinnerFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/showCompleted"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/hide"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/filterHolder"/>

        <TextView
            android:id="@+id/text_todosNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/todo_message"
            android:textAlignment="center"
            android:textColor="@color/introMessage"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_below="@+id/showCompleted"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewToDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_todosNone"
            android:nestedScrollingEnabled="false"/>

        <Button
            android:id="@+id/addButtonToDo"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add_todo"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/recyclerViewToDo" />

    </RelativeLayout>

</ScrollView>