<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.exams.ExamsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize"
        >
        <TextView
            android:id="@+id/exam_Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/header_exams"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:id="@+id/filterHolderExam"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/exam_Header"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filterDescriptionExam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_by"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerFilterExam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_examsNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/exam_message"
            android:textAlignment="center"
            android:textColor="@color/introMessage"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_below="@+id/filterHolderExam"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewExam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_examsNone"
            android:layout_alignParentStart="true"
            android:nestedScrollingEnabled="false" />

        <Button
            android:id="@+id/addButtonExam"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add_exam"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/recyclerViewExam" />

    </RelativeLayout>

</ScrollView>