<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.classes.ClassesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize"
       >

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/header_classes"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/text_classesNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/class_message"
            android:textAlignment="center"
            android:textColor="@color/introMessage"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_below="@+id/text_home"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_classesNone"
            android:nestedScrollingEnabled="false"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add_class"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/recyclerView" />
    </RelativeLayout>

</ScrollView>