<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/introImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/intro_image"
        app:layout_constraintBottom_toTopOf="@+id/introLinearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        />
    <LinearLayout
        android:id="@+id/introLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonGetStarted"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introImage"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >
    <TextView
        android:id="@+id/textViewIntroTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_title"
        android:textColor="@color/highlight"
        android:textSize="44sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        />

    <TextView
        android:id="@+id/textViewIntroMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_message"
        android:textColor="@color/introMessage"
        android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/highlight"
        android:text="@string/get_started"
        app:layout_constraintTop_toBottomOf="@+id/introLinearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>